gccida/g2/noce_emit_store_flag
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_emit_store_flag/src/ifcvt.c:974:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_emit_store_flag/src/ifcvt.c:975:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_emit_store_flag/src/ifcvt.c:1029:30: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_fmt_ee( v10, ( machine_mode)*( ( unsigned __int8 *)x + 2), cond->fld[0].rtx, *( rtx *)&cond[1]); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_emit_store_flag/src/obj/ifcvt.o] Error 1
